<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.soos.intelliwater.PlaceholderFragment">

    <TextView
        android:id="@+id/water_level_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="16dp"
        android:text="@string/label_water_level_bank1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auto_demand_water_level"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="@dimen/activity_vertical_margin" />

    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/fragment_auto_bank1_level_percentage"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water_level_text_view"
        app:progress_current="50"
        app:progress_max="100"
        app:progress_reached_bar_height="5dp"
        app:progress_text_size="18sp"
        app:progress_unreached_bar_height="3dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="16dp"
        android:text="@string/label_demand_level"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.warkiz.widget.IndicatorSeekBar
        android:id="@+id/fragment_auto_demand_water_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:isb_indicator_text_size="16sp"
        app:isb_indicator_type="circular_bubble"
        app:isb_progress="38"
        app:isb_seek_bar_type="continuous_texts_ends"
        app:isb_text_size="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/water_level_text_view_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="16dp"
        android:text="@string/label_water_level_bank2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auto_bank1_level_percentage"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/fragment_auto_source_level_percentage"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:indeterminate="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water_level_text_view_source"
        app:progress_current="50"
        app:progress_max="100"
        app:progress_reached_bar_height="5dp"
        app:progress_text_size="18sp"
        app:progress_unreached_bar_height="3dp" />


</android.support.constraint.ConstraintLayout>